# rust-ffi-guard

./: Cargo.toml  LICENSE  README.md  TROPHY_CASE.md
src/: lib.rs  main.rs  mcp.rs  report.rs  scanner.rs  trophy.rs
src/checks/: callback_panic.rs  cstring_unwrap.rs  extern_fn.rs  ffi_types.rs  from_raw_parts.rs  mod.rs  ptr_deref.rs  repr_c.rs  repr_c_layout.rs  repr_transparent.rs  unsafe_block.rs
